# reachy-mini-claude-cli-connector

./: .gitignore  CLAUDE.md  DESIGN.md  INSTALL.md  LICENSE  Makefile  README.md  pyproject.toml  run.sh
docs/superpowers/plans/: 2026-07-18-reachy-vision.md  2026-07-18-voice-directed-movement.md  2026-07-19-dashboard-embed-and-settings-shell.md  2026-07-19-dashboard-phase2-supervisor-and-live-config.md  2026-07-20-dashboard-phase3-multi-server-discovery.md
docs/superpowers/specs/: 2026-07-18-reachy-vision-design.md  2026-07-18-reachy-voice-movement-design.md  2026-07-19-dashboard-settings-and-server-discovery-design.md
reachy_app/: .env.example  README.md  __init__.py  app.py  audio.py  button_server.py  config.py  connector_client.py  discovery.py  loop.py  main.py  movement.py  requirements.txt  runtime_config.py  servers.py  supervisor.py  vad.py  wakeword.py
reachy_app/static/: index.html
reachy_app/tests/: test_smoke.py
reachy_claude_connector/: __init__.py  main.py
server/: .env.example  README.md  beacon.py  claude_client.py  config.py  main.py  movement.py  requirements.txt  smoke_test.py  stt.py  test_beacon.py  test_claude_prompt.py  test_movement.py  test_vision.py  tts.py  vision.py
